# EmptyEpsilon

./: CLAUDE.md  CMakeLists.txt  README.md  compile_script_docs.py  prompt.md  what_is_this_branch.txt
.agent/: FINAL_MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  PORT_SUMMARY.md  analysis.md  api_validation.cpp  final_summary.md  migration_plan.md  sdl_usage_analysis.md  simple_test.cpp  test_sdl3_basic  test_sdl3_basic.cpp  validation_report.md
android/: Readme-gradle.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  SeriousProton
android/app/src/main/cpp/cmake/: FindSDL2.cmake
cmake/: android.toolchain
netboot/: config_manager.py
osx/: MacOSXBundleInfo.plist.in  setDockIcon.h  setDockIcon.mm
scripts/: camera_api.lua  comms_scenario_utility.lua  comms_ship.lua  comms_station.lua  ee.lua  factionInfo.lua  model_data.lua  scenario_00_basic.lua  scenario_03_waves.lua  scenario_08_atlantis.lua  scenario_56_carrierTurret.lua  scenario_98_factiontest.lua  scenario_98_tractortest.lua  scenario_98_utility_beam_test.lua  scenario_99_battlefield.lua  scenario_99_test_scans.lua  scenario_carrier_test.lua  scenario_explosion_vfx_test.lua  scenario_test_camera.lua  scenario_test_camera_smooth.lua  scenario_test_mainscreen_camera.lua  scenario_test_minimal.lua  science_db.lua  shipTemplates.lua  shipTemplates_OLD.lua  test_explosion.lua  utils.lua
src/: GMActions.cpp  GMMessage.cpp  GMScriptCallback.cpp  beamTemplate.cpp  beamTemplate.h  commsScriptInterface.cpp  crewPosition.cpp  crewPosition.h  epsilonServer.cpp  factionInfo.cpp  factionInfo.h  gameGlobalInfo.cpp  (+26 more)
(+401 files in other folders)
